--- a/davezap.html
+++ b/davezap.html
@@ -3,8 +3,10 @@
         <TITLE> title of page</TITLE>
     </HEAD>
     <BODY>
-        <canvas width = "640" height = "480">
+        <canvas id="canvas1" width = "640" height = "480" style="border:1px solid #000000;"> 
 
         </canvas>
+        <script src="davezap.js"></script>
     </BODY>
 </HTML> 
+
