Game almost working

--- a/davezap.html
+++ b/davezap.html
@@ -6,7 +6,7 @@
         <canvas id="canvas1" width = "640" height = "480" style="border:1px solid #000000;"> 
 
         </canvas>
-        <script src="davezap.js"></script>
+        <script src="davezap2.js"></script>
     </BODY>
 </HTML> 
 
